2011-03-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asxxsrc/asmain.c (main): fixed warning
	* sdas/linksrc/lkaomf51.c (OutputAOEMF51): fixed bug 1630751
	  (ParseRegisters, CollectInfoFromCDB): get address for ascending registers
	* src/cdbFile.c: cosmetics
	* support/regression/fwk/lib/statics.c,
	* support/regression/tests/bug1477149.c: fixed for type float
	* sdas/linksrc/lkaomf51.c: disabled DODUMP

2011-03-18 Borut Razem <borut.razem AT gmail.com>

	* sdas/asxxsrc/asmain.c:
	  reverted incorrect fix for bug #3195019:
	  option -o just instructs sdas to generate an object file,
	  it doesn't take an object output file name as argument
	* sdas/asxxsrc/asmain.c:
	  hopefully properly fixed bug #3195019

2011-03-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/cdbFile.c (cdbWriteBasicSymbol),
	* src/SDCCglue.c (emitDebugSym),
	* debugger/mcs51/symtab.c (gc_strcat, symLookup): concatenate module and
	  function name seperated by . for locals to fix bug 1477149 with --debug
	* sdas/linksrc/lkaomf51.c (CollectInfoFromCDB): split S:L and L:L locals,
	  F:F are static, check modules for L:F and L:X
	* src/SDCCdebug.c: cosmetics
	* src/SDCCglue.c (emitOverlay): fixed bug 1477149
	* support/regression/fwk/lib/statics.c,
	* support/regression/ports/ds390/fwk.lib,
	* support/regression/ports/gbz80/fwk.lib,
	* support/regression/ports/hc08/fwk.lib,
	* support/regression/ports/ucz80/fwk.lib,
	* support/regression/tests/bug1477149.c: new, added
	* support/regression/ports/ds390/spec.mk,
	* support/regression/ports/hc08/spec.mk,
	* support/regression/ports/mcs51-common/spec.mk
	* support/regression/ports/ucz80/spec.mk: added FWKLIB and statics.rel
	* support/regression/ports/host/spec.mk.in: added statics.o
	* support/regression/ports/mcs51-common/fwk.lib: added statics.rel
	* .version: bumped to 3.0.2
	* src/cdbFile.c (cdbWriteBasicSymbol): applied patch from bug 1627975,
	  thanks sandra-l

2011-03-17 Borut Razem <borut.razem AT gmail.com>
