@@ -1,3 +1,11 @@
+2011-03-19 Borut Razem <borut.razem AT gmail.com>
+
+	* src/SDCCmain.c, src/SDCCutil.c, src/SDCCutil.h:
+	  fixed bug #3152525: sdcc doesn't pass double-quotes from -D option to sdcpp
+	* debugger/mcs51/simi.c:
+	  call ioctl(sock, FIONBIO, &iMode)
+	  replaced with fcntl(sock, F_SETFL, FNONBLOCK | FASYNC) on *nix
+
 2011-03-19 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* sdas/asxxsrc/asmain.c (main): fixed warning
